--- a/EmailLibTestMsRhino/EmailLibTestMsRhino.csproj
+++ b/EmailLibTestMsRhino/EmailLibTestMsRhino.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7ACF262B-8898-48C0-AD0E-CB583F5A101E}</ProjectGuid>
+    <ProjectGuid>{D8A0AF1D-5283-4809-A477-565900E90C2B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LocationLibTest</RootNamespace>
-    <AssemblyName>LocationLibTest</AssemblyName>
+    <RootNamespace>EmailLibTestMsRhino</RootNamespace>
+    <AssemblyName>EmailLibTestMsRhino</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\Lib\Rhino.Mocks\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,13 +53,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="LocationTest.cs" />
+    <Compile Include="NotifierTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LocationLib\LocationLib.csproj">
-      <Project>{3ff13679-8da2-47ec-9b6d-8034112ed2f1}</Project>
-      <Name>LocationLib</Name>
+    <ProjectReference Include="..\EmailLib\EmailLib.csproj">
+      <Project>{b2c856ef-3794-409a-9b71-bd176ea63d76}</Project>
+      <Name>EmailLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
