--- a/LocationLibTestMs/LocationLibTestMs.csproj
+++ b/LocationLibTestMs/LocationLibTestMs.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="LocationTest.cs" />
+    <Compile Include="StdLocationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +58,9 @@
       <Project>{3ff13679-8da2-47ec-9b6d-8034112ed2f1}</Project>
       <Name>LocationLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LocationSpec.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
